# Harmonia

./: Cargo.toml  README.md  build.rs
crates/harmonia-audio/: Cargo.toml
crates/harmonia-audio/src/: lib.rs  local.rs  router.rs  spotify_player.rs
crates/harmonia-core/: Cargo.toml
crates/harmonia-core/src/: config.rs  db.rs  lib.rs  models.rs  scanner.rs
crates/harmonia-spotify/: Cargo.toml
crates/harmonia-spotify/src/: auth.rs  client.rs  lib.rs  sync.rs
crates/harmonia-ui/: Cargo.toml
crates/harmonia-ui/src/: app.rs  theme.rs
crates/harmonia-ui/src/components/: mod.rs  sidebar.rs  track_list.rs  transport.rs
crates/harmonia-ui/src/views/: album_detail.rs  album_grid.rs  library.rs  mod.rs  now_playing.rs  playlist.rs  playlist_detail.rs  search.rs  settings.rs
src/: main.rs
