[package]
name = "harmonia-audio"
version.workspace = true
edition.workspace = true

[dependencies]
harmonia-core.workspace = true
symphonia.workspace = true
cpal.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
