[package]
name = "harmonia-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
parking_lot.workspace = true
image.workspace = true
lofty.workspace = true
