[package]
name = "harmonia-spotify"
version.workspace = true
edition.workspace = true

[dependencies]
harmonia-core.workspace = true
rspotify.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dirs.workspace = true
